# opencl

./: README.md
FFT_opencl/: kernel.cl  main.c
fft_opencl/: CMakeLists.txt  main.c
gpu_integrated_chained_kenels/: CMakeLists.txt  main.c
gpu_integrated_zero_coppy/: kernel.cl  main.c
opencl_chained_kernels/: CMakeLists.txt  main.c
temporal_axi_blobs_fusion/: .clang-format  .gitignore  CMakeLists.txt  main.c
temporal_axi_blobs_fusion/CMake/: axi_blobs_fusion.cmake
temporal_axi_blobs_fusion/autogen_kernels/: merge_plot_kernel.h.in
temporal_axi_blobs_fusion/headers/: axis_blobs_fusionner.h  common_structures.h  generate_data.h  merge_plot_kernel.h  tests.h
temporal_axi_blobs_fusion/src/: execute_axis_blobs_fusion.c  generate_data.c  init_axis_blobs_fusion.c  kernel.c  kernel.cl  release_axis_blobs_fusion.c  tests.c
